# fastapi_zero

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  compose.yaml  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: pipeline.yaml
fast_zero/: app.py  models.py  schemas.py  security.py  settings.py
fast_zero/routers/: auth.py  todos.py  users.py
migrations/versions/: 0a357f39eb48_create_todos_table.py  7a510b0b02eb_added_created_at_and_updated_at_columns_.py  e477dd927002_create_users_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_main.py  test_security.py  test_todos.py  test_users.py
