[tool.poetry]
name = "fast-zero"
version = "0.1.0"
description = ""
authors = ["BrenoOtsuka <breno.otsuka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
poetry = "1.8.3"
fastapi = {extras = ["standard"], version = "^0.115.2"}
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
sqlalchemy = "^2.0.35"
alembic = "^1.13.3"
pwdlib = {version = "0.2.1", extras = ["argon2"]}
pyjwt = "2.9.0"
tzdata = "^2024.2"
psycopg = {extras = ["binary"], version = "^3.2.3"}
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
testcontainers = "^4.8.2"
factory-boy = "^3.3.1"
freezegun = "^1.5.1"
taskipy = "^1.13.0"
ruff = "^0.6.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 90
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'


[tool.pytest.ini_options]
pythonpath = '.'
addopts = '-p no:warnings'


[tool.taskipy.tasks]
lint = 'ruff check .; ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
run = 'fastapi dev fast_zero/app.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=fast_zero -vv'
post_test = 'coverage html'
